test/files/neg/t5508.check
t5508.scala:4: error: Cannot access _st in trait Test$NestedTrait
    val escape = { () => _st }
                         ^
one error found
